revisi dengan menampilkan dari input()

--- a/tugas-repo.ipynb
+++ b/tugas-repo.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c221ad67",
+   "id": "04aaa30c",
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1540c29f",
+   "id": "9343f5e4",
    "metadata": {},
    "outputs": [
     {
@@ -34,6 +34,24 @@
    ],
    "source": [
     "nama = input()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4060d81a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sss\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nama)"
    ]
   }
  ],
